--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -1,8 +1,4 @@
-{% extends 'base.html' %}
-{% load static %}
-{% load humanize %}
-
-{% block body %}
+{% extends 'base.html' %} {% load static %} {% load humanize %} {% block body %}
 <section class="containers">
   <p class="title text-center fw-semibold">
     <span class="title__user">{{ user.nickname }}</span>
@@ -14,9 +10,17 @@
     <div class="profile__content">
       <div class="text-center">
         {% if user.profile_image %}
-        <img class="profile__img" src="{{user.profile_image.url}}" alt="profile-img" />
+        <img
+          class="profile__img"
+          src="{{user.profile_image.url}}"
+          alt="profile-img"
+        />
         {% else %}
-        <img class="profile__img" src="{% static 'img/profile_dummy.jpg' %}" alt="profile-img" />
+        <img
+          class="profile__img"
+          src="{% static 'img/profile_dummy.jpg' %}"
+          alt="profile-img"
+        />
         {% endif %}
         <p>
           <span class="profile__name">{{ user.nickname }}</span>
@@ -26,58 +30,92 @@
       <div class="profile__middle">
         <div class="follow">
           <div class="follow__container">
-            <span class="follow__cnt text-center" id="followings-count">{{ user.followings.all|length }}</span>
+            <span class="follow__cnt text-center" id="followings-count"
+              >{{ user.followings.all|length }}</span
+            >
             <span class="follow__title">팔로잉</span>
           </div>
           <div class="follow__container">
-            <span class="follow__cnt text-center" id="followers-count">{{ user.followers.all|length }}</span>
+            <span class="follow__cnt text-center" id="followers-count"
+              >{{ user.followers.all|length }}</span
+            >
             <span class="follow__title">팔로워</span>
           </div>
         </div>
-        {% if request.user.is_authenticated %}
-        {% if request.user != user %}
-        <form id="follow-form" data-user-id="{{ user.pk }}" data-my-id="{{ my.pk }}">
-          {% csrf_token %}
-          {% if request.user in user.followings.all %}
-          <button type="submit" class="follow__btn" id="follow-btn">follow</button>
+        {% if request.user.is_authenticated %} {% if request.user != user %}
+        <form
+          id="follow-form"
+          data-user-id="{{ user.pk }}"
+          data-my-id="{{ my.pk }}"
+        >
+          {% csrf_token %} {% if request.user in user.followings.all %}
+          <button type="submit" class="follow__btn" id="follow-btn">
+            follow
+          </button>
           {% else %}
-          <button type="submit" class="unfollow__btn" id="follow-btn">unfollow</button>
+          <button type="submit" class="unfollow__btn" id="follow-btn">
+            unfollow
+          </button>
           {% endif %}
         </form>
-        {% else %}
-        {% if request.user.pk == user.pk %}
+        {% else %} {% if request.user.pk == user.pk %}
         <a href="{% url 'accounts:update' %}">
           <button class="update__btn">회원 정보 수정</button>
         </a>
-        {% endif %}
-        {% endif %}
-        {% endif %}
+        {% endif %} {% endif %} {% endif %}
       </div>
       <div class="profile__bottom">
         {% if request.user != user %}
-        <a class="profile__link--notuser" href="{% url 'accounts:review_list' user.pk %}">
+        <a
+          class="profile__link--notuser"
+          href="{% url 'accounts:review_list' user.pk %}"
+        >
           리뷰 목록
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-            class="bi bi-caret-right-fill arrow" viewbox="0 0 16 16">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-caret-right-fill arrow"
+            viewbox="0 0 16 16"
+          >
             <path
-              d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
+              d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"
+            />
           </svg>
         </a>
         {% else %}
         <a class="profile__link">
           주문 내역
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-            class="bi bi-caret-right-fill arrow" viewbox="0 0 16 16">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-caret-right-fill arrow"
+            viewbox="0 0 16 16"
+          >
             <path
-              d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
+              d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"
+            />
           </svg>
         </a>
-        <a class="profile__link" href="{% url 'accounts:review_list' user.pk %}">
+        <a
+          class="profile__link"
+          href="{% url 'accounts:review_list' user.pk %}"
+        >
           리뷰 목록
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-            class="bi bi-caret-right-fill arrow" viewbox="0 0 16 16">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-caret-right-fill arrow"
+            viewbox="0 0 16 16"
+          >
             <path
-              d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
+              d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"
+            />
           </svg>
         </a>
 
@@ -90,123 +128,159 @@
   {% if request.user == user %}
   <p class="sub__title">최근 주문 내역</p>
   <section class="order__history">
-    <div class="order__history__category">
-      <span class="order__category__number">주문 번호</span><span class="order__category__title">주문 상품</span><span
-        class="order__category__status">주문 상태</span>
-    </div>
-    <!-- 보이는 아이템 -->
-    <div class="order__items show__order">
-      <div class="order__history__container">
-        <span class="order__number">000584858</span>
-        <img class="order__img"
-          src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false"
-          alt="order-img" />
-        <span class="order__title">모모씨 베어 키링 (6종)</span>
-        <span class=" order__status">상품 준비중</span>
-      </div>
-      <!-- 숨기는 아이템 -->
-      <div class="hide__order hidden">
-        <div class="order__history__container">
-          <span class="order__number">000584858</span>
-          <img class="order__img"
-            src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false"
-            alt="order-img" />
-          <span class="order__title">모모씨 베어 키링 (6종)</span>
-          <span class=" order__status">상품 준비중</span>
-        </div>
-        <div class="order__history__container">
-          <span class="order__number">000584858</span>
-          <img class="order__img"
-            src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false"
-            alt="order-img" />
-          <span class="order__title">모모씨 베어 키링 (6종)</span>
-          <span class=" order__status">상품 준비중</span>
-        </div>
-      </div>
-    </div>
-    <svg class="bi bi-caret-down-fill arrow__down" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-      fill="currentColor" viewbox="0 0 16 16">
+    <table>
+      <thead>
+        <tr>
+          <th>주문 번호</th>
+          <th></th>
+          <th>주문 상품</th>
+          <th>주문 상태</th>
+        </tr>
+      </thead>
+      <!-- 여기에 주문 상품 for문 넣으시면 됩니다. -->
+      <tbody>
+        <tr>
+          <td class="order__td--number">1234567</td>
+          <td class="order__td--img">
+            <img
+              class="profile__review--img"
+              src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false"
+              alt="order-img"
+              alt="order-img"
+            />
+          </td>
+          <td class="order__name">모모씨 베어 키링 (6종)</td>
+          <td class="order__td--status">상품 준비중</td>
+        </tr>
+        <!-- 숨기는 아이템 -->
+        <tr class="hide__order hidden">
+          <td class="order__td--number">1234567</td>
+          <td class="order__td--img">
+            <img
+              class="profile__review--img"
+              src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false"
+              alt="order-img"
+              alt="order-img"
+            />
+          </td>
+          <td class="order__name">모모씨 베어 키링 (6종)</td>
+          <td class="order__td--status">상품 준비중</td>
+        </tr>
+      </tbody>
+      <!-- endfor 넣는 자리 -->
+    </table>
+    <svg
+      class="bi bi-caret-down-fill arrow__down"
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      fill="currentColor"
+      viewbox="0 0 16 16"
+    >
       <path
-        d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+        d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
+      />
     </svg>
-
   </section>
   {% endif %}
 
   <!-- 최근 리뷰 -->
   <div class="main__title">
     <p class="sub__title">최근 리뷰</p>
-    <a class="plus__title" href="{% url 'accounts:review_list' user.pk %}">더보기 ></a>
+    <a class="plus__title" href="{% url 'accounts:review_list' user.pk %}"
+      >더보기 ></a
+    >
   </div>
   <section>
-    <div class="review__category">
-      <span class="category__name">상품 이름</span><span class="category__grade">평점</span><span class="category__title">리뷰
-        제목</span>
-    </div>
-    <hr class="line" />
-    <!-- 내가쓴 리뷰 목록 -->
     {% if not reviews %}
     <h1 class="empty">리뷰가 없어요 :(</h1>
     {% else %}
-    {% for review in reviews %}
-    <div class="review review__container">
-      <a href="{% url 'products:products_detail' review.product.pk %}">
-        <img class="review__img" src="{{ review.product.product_image.all.first.image.url }}" alt="review-img" />
-        <span class="review__name">{{ review.product.name }}</span>
-      </a>
-      <span class="review__grade">
-        <!-- 개행 방지 -->
-        <svg class="bi bi-star-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-          viewbox="0 0 16 16">
-          <path
-            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-        </svg>
-        <!-- 개행 방지 -->
-        {{ review.grade }}
-      </span>
-      <span class="review__title">{{ review.title }}</span>
-    </div>
-    {% endfor %}
+    <table>
+      <thead>
+        <tr>
+          <th></th>
+          <th>상품 이름</th>
+          <th>평점</th>
+          <th>리뷰 제목</th>
+        </tr>
+      </thead>
+      {% for review in reviews %}
+      <tbody>
+        <tr>
+          <td class="review__td--img">
+            <a href="{% url 'products:products_detail' review.product.pk %}">
+              <img
+                class="profile__review--img"
+                src="{{ review.product.product_image.all.first.image.url }}"
+                alt="review-img"
+            /></a>
+          </td>
+          <td class="review__td--name">
+            <a href="{% url 'products:products_detail' review.product.pk %}"
+              >{{ review.product.name }}</a
+            >
+          </td>
+          <td class="review__grade">
+            <svg
+              class="bi bi-star-fill"
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              viewbox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            {{ review.grade }}
+          </td>
+          <td class="review__td--title">{{ review.title }}</td>
+        </tr>
+      </tbody>
+      {% endfor %}
+    </table>
     {% endif %}
-
   </section>
 
   <!-- Wish List -->
   <div class="main__title">
     <p class="sub__title">Wish List</p>
-    <a class="plus__title" href="{% url 'accounts:wishlist' user.pk %}">더보기 ></a>
+    <a class="plus__title" href="{% url 'accounts:wishlist' user.pk %}"
+      >더보기 ></a
+    >
   </div>
   <section class="wishlist">
     <div class="wishlist__content">
       {% if user.like_products.all %}
+      <!--  -->
       {% for product in user.like_products.all|slice:":4" %}
-      <a href="{% url " products:products_detail" product.pk %}">
+      <a href="{% url 'products:products_detail' product.pk %}">
         <div class="wishlist__box">
-          <img class="wishlist__img" src="{{ product.product_image.all.first.image.url }}" alt="wishlist-img" />
+          <img
+            class="wishlist__img"
+            src="{{ product.product_image.all.first.image.url }}"
+            alt="wishlist-img"
+          />
           <p class="wishlist__title">{{ product.name }}</p>
           <p class="wishlist__price">{{ product.pay|intcomma }}원</p>
+        </div>
       </a>
-    </div>
-    {% endfor %}
-    {% else%}
-    <h1 class="empty">위시리스트가 없어요 :(</h1>
-    {% endif %}
+      {% endfor %} {% else %}
+      <h1 class="empty">위시리스트가 없어요 :(</h1>
+      {% endif %}
     </div>
   </section>
 </section>
-{% endblock body %}
-
-{% block js %}
+{% endblock body %} {% block js %}
 <script>
   const hide = document.querySelector('.hide__order');
   const arrowBtn = document.querySelector('.arrow__down');
 
-  arrowBtn.addEventListener('click', toggleAccordion)
+  arrowBtn.addEventListener('click', toggleAccordion);
 
   function toggleAccordion(el) {
-    hide
-      .classList
-      .toggle('hidden');
+    hide.classList.toggle('hidden');
   }
 </script>
 {% endblock js %}
