--- a/accounts/templates/accounts/wishlist.html
+++ b/accounts/templates/accounts/wishlist.html
@@ -9,44 +9,48 @@
       <span class="title__user">{{ users.nickname }}</span>
       님의 Wish List
     </p>
-    <!-- 버튼 -->
-    <div class="wishlist__btn">
-      <button class="cart__btn">장바구니 담기</button>
-      <button class="delete__btn" type="submit" form="like_form">
-        삭제하기
-      </button>
-    </div>
-    <!-- 찜 목록 -->
 
-    <form action="" method="POST" name='delete_form' id="like_form">
-      <div class="wishlist__content wishlist__container">
-        {% if user.like_products.all %}
-          {% for product in user.like_products.all %}
-            {% csrf_token %}
-            <div class="wishlist__box">
-              <a href="{% url "products:products_detail" product.pk %}">
-                <input class="checkbox" type="checkbox" name="answer[]" id="opt-in" value="{{ product.pk }}"/>
-                <img class="wishlist__img" src="{{ product.product_image.all.first.image.url }}" alt="wishlist-img"/>
-                <p class="wishlist__title">{{ product.name }}</p>
-                <p class="wishlist__price">{{ product.pay|intcomma }}원</p>
-              </a>
-            </div>
-          {% endfor %}
-        {% endif %}
+    {% if user.like_products.all %}
+      <!-- 버튼 -->
+      <div class="wishlist__btn">
+        <button class="cart__btn">장바구니 담기</button>
+        <button class="delete__btn" type="submit" form="like_form">
+          삭제하기
+        </button>
       </div>
-      <input type="submit" value="" name="delete_input" id="ckbox">
-    </form>
+      <!-- 찜 목록 -->
+      <form action="" method="POST" name='delete_form' id="like_form">
+        <div class="wishlist__content wishlist__container">
+          {% if user.like_products.all %}
+            {% for product in user.like_products.all %}
+              {% csrf_token %}
+              <div class="wishlist__box">
+                <a href="{% url "products:products_detail" product.pk %}">
+                  <input class="checkbox" type="checkbox" name="answer[]" id="opt-in" value="{{ product.pk }}"/>
+                  <img class="wishlist__img" src="{{ product.product_image.all.first.image.url }}" alt="wishlist-img"/>
+                  <p class="wishlist__title">{{ product.name }}</p>
+                  <p class="wishlist__price">{{ product.pay|intcomma }}원</p>
+                </a>
+              </div>
+            {% endfor %}
+          {% endif %}
+        </div>
+        <input type="submit" value="" name="delete_input" id="ckbox">
+      </form>
 
-    <div class="ment text-center">
-      <p class="info">
-        더 많은 상품을
-        <span class="info__wishlist">🎁위시리스트</span>에 담아보세요 :)
-      </p>
-      <p class="goto">
-        <a href={% url 'products:index' %}>쇼핑 바로 가기</a>
-      </p>
-    </div>
+      <div class="ment text-center">
+        <p class="info">
+          더 많은 상품을
+          <span class="info__wishlist">🎁위시리스트</span>에 담아보세요 :)
+        </p>
+        <p class="goto">
+          <a href={% url 'products:index' %}>쇼핑 바로 가기</a>
+        </p>
+      </div>
+
+    {% else %}
+      <h1 class="empty">위시리스트가 없어요 :(</h1>
+    {% endif %}
   </section>
-
 
 {% endblock body %}
