--- a/bulletin/templates/bulletin/updateA.html
+++ b/bulletin/templates/bulletin/updateA.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
+{% block body %}
 <form action="" method="POST">
     {% csrf_token %}
     {% bootstrap_form form %}
