카트 템플릿 구현

--- a/accounts/templates/accounts/review_list.html
+++ b/accounts/templates/accounts/review_list.html
@@ -10,9 +10,9 @@
     </p>
 
     <!-- 리뷰 리스트 -->
-    <section class="review">
+    <section class="review pb-5">
       {% if reviews %}
-        <table>
+        <table class="review__table">
           <thead>
             <tr>
               <th></th>
