--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="{% static 'styles/accounts_detail.css' %}" />
   <link rel="stylesheet" href="{% static 'styles/wishlist.css' %}" />
   <link rel="stylesheet" href="{% static 'styles/accounts_review_list.css' %}" />
+  <link rel="stylesheet" href="{% static 'styles/cart.css' %}" />
   {% block css %} {% endblock css %}
   <link rel="stylesheet" href="{% static 'styles/review_modal.css' %}">
   <link rel="stylesheet" href="{% static 'styles/search_fail.css' %}" >
