--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -4,75 +4,87 @@
 
 <!-- 장바구니 body-->
 {% block body %}
-  <div class='text-center'>
-    <h1>
-      너님의 마구니가 꼈어
-    </h1>
-  </div>
-  {% if not cart_items %}
+  <section class="cart__container">
     <div class='text-center'>
-      <h1>
-        cart is empty
-      </h1>
-      <p class='text-center'>
-        쇼핑을 더하려면
-        <a color="blue" href="{% url 'products:index' %}">메인페이지</a>
-        를 클릭하세요</p>
+      <p class="title text-center fw-semibold">
+        <span class="title__user">{{ user.nickname }}</span>
+        님의 장바구니
+      </p>
     </div>
-  {% else %}
-    <div>
-      <table class="table">
-        <thread>
-          <tr>
-            <th>너님의 상품</th>
-          </tr>
-        </thread>
+    {% if not cart_items %}
+      <div class='text-center pt-4'>
+        <h1 class="empty mb-3">장바구니에 담긴 상품이 없어요 :(</h1>
+        <p class='text-center'>
+          쇼핑을 더하려면
+          <a class="goto" href="{% url 'products:index' %}">메인페이지</a>
+          를 클릭하세요</p>
+      </div>
+    {% else %}
+
+      <div class="wishlist__btn">
+        <button class="delete__btn" type="submit" form="like_form">
+          삭제하기
+        </button>
+      </div>
+      <table class="cart__table">
         <thbody>
           {% for cart_item in cart_items %}
             <tr>
-              <td>
+              <td class="cart__checkbox"><input type="checkbox" name="choice" onclick='getCheckedCnt()'></td>
+              <td class="cart__img">
                 <a href="{% url "products:products_detail" cart_item.product.id %}"><img style="height: 100px;" src="{{ cart_item.product.product_image.all.first.image.url }}" alt=""></a>
               </td>
-              <td>
-                {{ cart_item.product.name }}
-                {{ cart_item.product.id }}
-                금액 :
-                {{cart_item.product.pay|intcomma }}
-                수량 :
-                {{cart_item.quantity }}
-
+              <td class="cart__name">
+                <p class="mb-3">
+                  {{ cart_item.product.name }}</p>
+                <p>{{cart_item.product.pay|intcomma }}
+                  원
+                </p>
               </td>
-              <td>
-                합계 :
+              <td class="cart__quantity">
+                <div class=" buy-mount-btn">
+                  <span class='minus-btn'>-</span>
+                  <span class='buy-mount'>1</span>
+                  <span class='plus-btn'>+</span>
+                </div>
+              </td>
+              <td class="cart__total">
                 {{ cart_item.sub_total|intcomma }}
+                원
               </td>
-              {% if cart_item.quantity < cart_item.product.stock %}
-                <td>
-                  <a href="{% url "cart:add_cart" cart_item.product.id %}">추가</a>
-                </td>
-              {% else %}
-                <td>
-                  <a href="#">
-                    삭제하기
-                  </a>
-                </td>
-              {% endif %}
             </tr>
           {% endfor %}
         </tbody>
       </table>
-      <br>
-      <div class="text-center my-4 container">
-        <span>총 상품 건수 :
-          {{ total_count }}건 |
-        </span>
-        <span>
-          주문 합계 :
+
+      <p class="cart__choice">총
+        <span id="count__result" class="total__count">0</span>
+        개의 상품을 선택하셨습니다.
+      </p>
+      <div class="cart__result">
+        <p class="cart__pay--total">
+          전체 주문 금액 :
           {{ pay_total|intcomma}}원
-        </span>
+        </p>
+        <button class="cart__btn" type="submit" form="like_form">
+          주문 하기
+        </button>
       </div>
 
-    </div>
-  {% endif %}
+    {% endif %}
+  </section>
+  <script>
+    function getCheckedCnt() {
+      const query = 'input[name="choice"]:checked';
+      const selectedElements = document.querySelectorAll(query);
+
+      const selectedElementsCnt = selectedElements.length;
+
+      // 출력
+      document
+        .getElementById('count__result')
+        .textContent = selectedElementsCnt;
+    }
+  </script>
 
 {% endblock body %}
