--- a/accounts/templates/accounts/wishlist.html
+++ b/accounts/templates/accounts/wishlist.html
@@ -44,7 +44,7 @@
           <span class="info__wishlist">🎁위시리스트</span>에 담아보세요 :)
         </p>
         <p class="goto">
-          <a href={% url 'products:index' %}>쇼핑 바로 가기</a>
+          <a href={% url 'index' %}>쇼핑 바로 가기</a>
         </p>
       </div>
 
