--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -17,7 +17,7 @@
       </h1>
       <p class='text-center'>
         쇼핑을 더하려면
-        <a color="blue" href="{% url 'products:index' %}">메인페이지</a>
+        <a color="blue" href="{% url 'index' %}">메인페이지</a>
         를 클릭하세요</p>
     </div>
   {% else %}
