--- a/static/styles/review_modal.css
+++ b/static/styles/review_modal.css
@@ -109,9 +109,10 @@
 	right: 0;
 	display: flex;
 	align-items: center;
+	opacity: 0.7;
 }
 #review-area .rev-sec .rev-main .rev-header .rev-btn a:first-child {
-	margin: 0.2rem 0.5rem 0 0;
+	margin-right: 0.5rem;
 }
 #review-area .rev-sec .rev-main .rev-header .rev-rate .bi-star-fill {
 	color: var(--rate);
@@ -149,6 +150,7 @@
 #qna-area .qna-sec .qna-header {
 	font-size: 0.95rem;
 	margin-bottom: 2rem;
+	position: relative;
 }
 #qna-area .qna-sec .qna-header .qna-info .qna-status {
 	color: var(--main);
@@ -158,6 +160,13 @@
 	margin-top: 1rem;
 	color: var(--line);
 }
+#qna-area .qna-sec .qna-header .qna-btn {
+	position: absolute;
+	right: 0;
+	top: 0;
+	font-size: 1rem;
+}
+
 #qna-area .qna-sec .qna-main .qna-cont {
 	display: flex;
 	margin-bottom: 1.5rem;
@@ -338,10 +347,16 @@
 	width: 100%;
 	text-align: center;
 }
-#qna .qna-cate .cate-area td {
+#qna .qna-cate .cate-area .tab_oper {
 	border: 2px solid var(--main);
-	padding: 1rem 0;
 	transition: 0.2s;
+	padding: 0;
+}
+#qna .qna-cate .cate-area .tab_oper input {
+	display: none;
+}
+#qna .qna-cate .cate-area .tab_oper label {
+	padding: 1rem;
 	cursor: pointer;
 }
 #qna .qna-cate .cate-area td:hover,
