--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -286,7 +286,8 @@
                   </p>
                   {% if request.user.is_authenticated and request.user.pk == review.account.pk %}
                   <div class="rev-btn">
-                    <a href="{% url 'reviews:update' review.pk %}" class="btn-modal-update">수정</a>
+                    <a href="{% url 'reviews:update' review.pk %}" class="btn-modal-update"
+                      data-cnt="{{ forloop.counter}}">수정</a>
                     <a href="{% url 'reviews:delete' review.pk %}" class="btn-modal-delete">삭제</a>
                   </div>
                   {% endif %}
